# liberti

./: .gitignore  Makefile  Makefile.am  README  TODO  configure.ac  skins.md
doc/: hotkeys.md  skins.md
src/: button.h  colors.c  colors.h  evalformula.c  evalformula.h  font.c  font.h  keys.c  keys.h  lbtscreen.c  lbtscreen.h  lbtstate.c  lbtstate.h  liberti.c  log.c  log.h  menu.h  mode.h  mode_default.c  mode_default.h  point.h  screen.c  screen.h  skin.c  skin.h  state.c  state.h  tib.c  tib.h  tibasic.c  tibasic.h  tibchar.c  tibchar.h  tibdecode.c  tibencode.c  tiberr.h  tibeval.c  tibeval.h  tibexpr.c  tibexpr.h  (+21 more)
